# seven-day-roguelike-challenge-claude-code

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.txt  beastiary.py  build.py  grimoire.py  pyproject.toml  run.py
.claude/: project-structure.md
docs/: beastiary.md  grimoire.md
specs/: BUGS.md  base_system_specification.md  event_system_spec.md  item_pool_system_spec.md  one_class_per_file.md  project_plan.md  shop_system_specification.md
src/: aspects.py  constants.py  entity.py  event_context.py  event_emitter.py  event_type.py  game.py  items.py  level.py  level_manager.py  main.py  monster.py  player.py  shop.py  shop_manager.py  stats.py  status_effects.py  traits.py  ui.py
tests/: test_accessory_bonuses.py  test_accessory_equip_bug.py  test_ace_of_coins.py  test_ace_of_cups.py  test_ace_of_swords.py  test_ace_of_wands.py  test_all_pickups_spawn.py  test_anaglyph_fix.py  test_arrow_navigation.py  test_base_generation.py  test_base_progression.py  test_black_belt.py  test_boon_base_class.py  test_boon_choice_system.py  test_boon_ui_visibility.py  test_boss_victory.py  test_brutality_expertise.py  test_bug_fixes.py  test_catalyst_death_check.py  test_combat_messages.py  test_combat_simple.py  test_consumable_pointer_reset.py  test_consumables_removed.py  test_death_system.py  test_devil_balanced.py  test_devil_combat_debug.py  test_devil_damage_precise.py  test_devil_encounter_complete.py  test_devil_victory.py  test_devil_victory_detailed.py  test_devil_victory_force.py  test_dodge_master_ring.py  test_elemental_boons.py  test_elemental_traits_system.py  (+74 more)
(+193 files in other folders)
